5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1593_2043.log
== TEST (2019-04-01 19:51:18) 
-- CODE:
nota1 = float(input(("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(media)
-- ERROR:
File "XXXX", line 2
    nota2 = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:30) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(media)
-- OUTPUT:
8.125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:51:39) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(media)
-- EXECUTION TIME:
0.191745
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.125
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.397500000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:01) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:08) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:52:10) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.191739
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:52:18) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.177148
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:18) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:52:28) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.160068
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:46) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:52:53) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.144571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:26) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:54) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:07) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:17) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:54:25) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.202437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:58) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:55:15) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.248294
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:55:35) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:56:48) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media, 2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:58:19) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = ((nota1)*1 + (nota2)*2 + (nota3)*3 + (nota4)*4)/4
print(round(media, 2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:58:33) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = ((nota1)*1 + (nota2)*2 + (nota3)*3 + (nota4)*4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.156625
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:00:12) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/4
print(round(media, 2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 20:00:25) 
-- CODE:
nota1 = float(input("Qual a nota 1? "))
nota2 = float(input("Qual a nota 2? "))
nota3 = float(input("Qual a nota 3? "))
nota4 = float(input("Qual a nota 4? "))
media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.269449
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:00:44) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/4
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:00:48) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/4
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 20:00:56) 
-- CODE:
nota1 = int(input("Qual a nota 1? "))
nota2 = int(input("Qual a nota 2? "))
nota3 = int(input("Qual a nota 3? "))
nota4 = int(input("Qual a nota 4? "))
media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/4
print(round(media, 2))
-- EXECUTION TIME:
0.142713
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:51:19) 
-- CODE:
nota1 = float(input("Nota 1 : "))
nota2 = float(input("Nota 2 : "))
nota3 = float(input("Nota 3 : "))
nota4 = float(input("Nota 4 : "))
mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4 )/ 11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:52:10) 
-- CODE:
nota1 = float(input("Nota 1 : "))
nota2 = float(input("Nota 2 : "))
nota3 = float(input("Nota 3 : "))
nota4 = float(input("Nota 4 : "))
mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4 )/ 10
print(round(mediap, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:52:10) 
-- CODE:
nota1 = float(input("Nota 1 : "))
nota2 = float(input("Nota 2 : "))
nota3 = float(input("Nota 3 : "))
nota4 = float(input("Nota 4 : "))
mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4 )/ 10
print(round(mediap, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:52:21) 
-- CODE:
nota1 = float(input("Nota 1 : "))
nota2 = float(input("Nota 2 : "))
nota3 = float(input("Nota 3 : "))
nota4 = float(input("Nota 4 : "))
mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4 )/ 10
print(round(mediap, 2))
-- EXECUTION TIME:
0.171639
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
